Добавлено поле enabled в сущность Shift для возможности выведения смен из видимости; Добавлены заготовки для кабинета администратора, добавлена таблица admins